--- a/app/src/main/res/drawable/chat_green_selected.xml
+++ b/app/src/main/res/drawable/chat_green_selected.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="@color/bluePrimary">
+        android:color="@color/gray">
     <item android:id="@android:id/mask">
         <layer-list>
             <item>
@@ -33,13 +33,13 @@
                         android:toDegrees="0" >
                     <shape android:shape="rectangle" >
                         <corners android:radius="8dp" />
-                        <solid android:color="@color/greenChat" />
+                        <solid android:color="@color/gray" />
                     </shape>
                 </rotate>
             </item>
             <item android:right="16dp">
                 <shape android:shape="rectangle" >
-                    <solid android:color="@color/greenChat" />
+                    <solid android:color="@color/gray" />
                     <corners android:radius="4dp" />
                 </shape>
             </item>
