--- a/app/src/main/res/drawable/chat_white.xml
+++ b/app/src/main/res/drawable/chat_white.xml
@@ -1,22 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <rotate
-                android:fromDegrees="-45"
-                android:pivotX="0%"
-                android:pivotY="0%"
-                android:toDegrees="0" >
-            <shape android:shape="rectangle" >
-                <corners android:radius="8dp" />
-                <solid android:color="@color/white" />
-            </shape>
-        </rotate>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+        android:color="@color/bluePrimary">
+    <item android:id="@android:id/mask">
+        <layer-list>
+            <item>
+            <rotate android:fromDegrees="-45"
+                    android:pivotX="0%"
+                    android:pivotY="0%"
+                    android:toDegrees="0" >
+                <shape android:shape="rectangle" >
+                    <corners android:radius="8dp" />
+                    <solid android:color="@color/bluePrimary" />
+                </shape>
+            </rotate>
+            </item>
+
+            <item android:left="16dp">
+                <shape android:shape="rectangle" >
+                    <solid android:color="@color/bluePrimary" />
+                    <corners android:radius="4dp" />
+                </shape>
+            </item>
+        </layer-list>
     </item>
 
-    <item android:left="16dp">
-        <shape android:shape="rectangle" >
-            <solid android:color="@color/white" />
-            <corners android:radius="4dp" />
-        </shape>
+    <item android:id="@android:id/background">
+        <layer-list>
+            <item>
+                <rotate
+                        android:fromDegrees="-45"
+                        android:pivotX="0%"
+                        android:pivotY="0%"
+                        android:toDegrees="0" >
+                    <shape android:shape="rectangle" >
+                        <corners android:radius="8dp" />
+                        <solid android:color="@color/white" />
+                    </shape>
+                </rotate>
+            </item>
+
+            <item android:left="16dp">
+                <shape android:shape="rectangle" >
+                    <solid android:color="@color/white" />
+                    <corners android:radius="4dp" />
+                </shape>
+            </item>
+        </layer-list>
     </item>
-</layer-list>
+</ripple>
