--- a/app/src/main/res/drawable/chat_white_selected.xml
+++ b/app/src/main/res/drawable/chat_white_selected.xml
@@ -4,17 +4,18 @@
     <item android:id="@android:id/mask">
         <layer-list>
             <item>
-                <rotate android:fromDegrees="45"
-                        android:pivotX="100%"
-                        android:pivotY="0%"
-                        android:toDegrees="0" >
-                    <shape android:shape="rectangle" >
-                        <corners android:radius="8dp" />
-                        <solid android:color="@color/bluePrimary" />
-                    </shape>
-                </rotate>
+            <rotate android:fromDegrees="-45"
+                    android:pivotX="0%"
+                    android:pivotY="0%"
+                    android:toDegrees="0" >
+                <shape android:shape="rectangle" >
+                    <corners android:radius="8dp" />
+                    <solid android:color="@color/bluePrimary" />
+                </shape>
+            </rotate>
             </item>
-            <item android:right="16dp">
+
+            <item android:left="16dp">
                 <shape android:shape="rectangle" >
                     <solid android:color="@color/bluePrimary" />
                     <corners android:radius="4dp" />
@@ -27,19 +28,20 @@
         <layer-list>
             <item>
                 <rotate
-                        android:fromDegrees="45"
-                        android:pivotX="100%"
+                        android:fromDegrees="-45"
+                        android:pivotX="0%"
                         android:pivotY="0%"
                         android:toDegrees="0" >
                     <shape android:shape="rectangle" >
                         <corners android:radius="8dp" />
-                        <solid android:color="@color/greenChat" />
+                        <solid android:color="@color/gray" />
                     </shape>
                 </rotate>
             </item>
-            <item android:right="16dp">
+
+            <item android:left="16dp">
                 <shape android:shape="rectangle" >
-                    <solid android:color="@color/greenChat" />
+                    <solid android:color="@color/gray" />
                     <corners android:radius="4dp" />
                 </shape>
             </item>
