--- a/app/src/main/res/layout/activity_chat_detail.xml
+++ b/app/src/main/res/layout/activity_chat_detail.xml
@@ -8,6 +8,15 @@
                                                    android:background="@color/gray_op"
                                                    android:focusableInTouchMode="true">
 
+    <androidx.appcompat.widget.Toolbar
+            android:layout_width="0dp"
+            android:layout_height= "?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="?attr/actionBarTheme"
+            android:id="@+id/toolbar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="?attr/actionBarSize" android:id="@+id/CLToolbar"
@@ -21,29 +30,39 @@
                 android:id="@+id/ivBack" app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintDimensionRatio="1:1" android:padding="8dp"/>
+                app:layout_constraintDimensionRatio="1:1" android:padding="16dp"
+                android:background="@drawable/rip_round_trans"/>
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="0dp" app:srcCompat="@drawable/ic_logout_white"
+                android:id="@+id/ivChBg" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="1:1" android:padding="16dp"
+                android:background="@drawable/rip_round_trans"
+                app:layout_constraintEnd_toEndOf="parent"/>
         <ImageView
                 android:layout_width="0dp"
                 android:layout_height="0dp" android:id="@+id/ivPP"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="1:1" app:layout_constraintVertical_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/ivBack" android:padding="2dp"/>
+                app:layout_constraintStart_toEndOf="@+id/ivBack" android:padding="8dp"
+                android:background="@drawable/rip_round_trans"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/tvTitle" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/ivPP"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp" android:textColor="@color/white" android:textStyle="bold"
-                android:textSize="18sp"/>
+                android:textSize="18sp" app:layout_constraintEnd_toStartOf="@+id/ivChBg"/>
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/tvSub"
-                app:layout_constraintTop_toBottomOf="@+id/tvTitle" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/ivPP"
                 android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/white"
-                android:layout_marginTop="2dp"/>
+                android:layout_marginTop="2dp" app:layout_constraintEnd_toStartOf="@+id/ivChBg"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -55,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/fabSend"
-            app:layout_constraintTop_toBottomOf="@+id/CLToolbar" android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginBottom="8dp"
             app:reverseLayout="true"/>
     <EditText
             android:id="@+id/etChat"
