--- a/app/src/main/res/layout/in_menu_attachment.xml
+++ b/app/src/main/res/layout/in_menu_attachment.xml
@@ -100,7 +100,7 @@
             android:scaleType="centerInside" android:paddingBottom="16dp" app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintBottom_toBottomOf="@+id/btAudio"/>
     <TextView
-            android:text="Location"
+            android:text="Contact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/tvContact"
             app:layout_constraintBottom_toBottomOf="parent"
