--- a/app/src/main/res/layout/item_channel_list.xml
+++ b/app/src/main/res/layout/item_channel_list.xml
@@ -5,7 +5,7 @@
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="wrap_content" android:id="@+id/FLIRoot"
-                                                   android:background="?android:attr/selectableItemBackground">
+                                                   android:background="@drawable/rip_rect_trans">
 
     <View
             android:layout_width="0dp"
@@ -13,8 +13,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/gray_op"
-            app:layout_constraintTop_toTopOf="parent" android:alpha="0.5"/>
+            android:background="@color/gray_dop"
+            app:layout_constraintTop_toTopOf="parent" android:alpha="0.3"/>
     <ImageView
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -99,7 +99,7 @@
             android:layout_width="0dp"
             android:layout_height="2dp" android:id="@+id/view"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:background="@color/black_dop"/>
+            android:background="@color/gray_dop" app:layout_constraintStart_toEndOf="@+id/ivPP"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
