--- a/app/src/main/res/layout/item_chat_file_me.xml
+++ b/app/src/main/res/layout/item_chat_file_me.xml
@@ -18,7 +18,7 @@
             android:visibility="gone"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/CLChatLeft"
+            android:id="@+id/CLChat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="8dp"
