--- a/app/src/main/res/layout/item_chat_image_me.xml
+++ b/app/src/main/res/layout/item_chat_image_me.xml
@@ -18,7 +18,7 @@
             android:visibility="gone"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/CLChatLeft"
+            android:id="@+id/CLChat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -38,10 +38,10 @@
                 app:layout_constraintDimensionRatio="1:1" android:visibility="invisible"/>
         <ImageView
                 android:layout_width="0dp"
-                android:layout_height="0dp" android:id="@+id/ivBody"
+                android:layout_height="wrap_content" android:id="@+id/ivBody"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" app:layout_constraintDimensionRatio="1:1"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle" app:layout_constraintBottom_toTopOf="@+id/tvTime"
                 android:layout_marginBottom="8dp"/>
         <TextView
