--- a/app/src/main/res/layout/item_chat_video_other.xml
+++ b/app/src/main/res/layout/item_chat_video_other.xml
@@ -17,7 +17,7 @@
             android:visibility="gone"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/CLChatLeft"
+            android:id="@+id/CLChat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/chat_white"
