--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,4 +79,9 @@
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 
+    <style name="attachmentPopupAnimation" parent="android:Animation" mce_bogus="1">
+        <item name="android:windowEnterAnimation">@anim/attachment_menu_show</item>
+        <item name="android:windowExitAnimation">@anim/attachment_menu_hide</item>
+    </style>
+
 </resources>
