--- a/app/src/main/res/layout/item_attachment_contact_list.xml
+++ b/app/src/main/res/layout/item_attachment_contact_list.xml
@@ -32,20 +32,11 @@
             android:text="TextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content" android:id="@+id/tvTitle"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ivPP" android:layout_marginStart="8dp"
             android:textSize="18sp"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tvSubtitle"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:id="@+id/tvSubtitle"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/ivPP" android:layout_marginStart="8dp"
-            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:textColor="@color/gray_dop"/>
+            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <View
             android:layout_width="0dp"
             android:layout_height="2dp" android:id="@+id/view"
